--- a/CRM/src/main/resources/com/example/crm/view_search.fxml
+++ b/CRM/src/main/resources/com/example/crm/view_search.fxml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<?import org.kordamp.ikonli.javafx.FontIcon?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crm.SearchController">
     <children>
         <TextField fx:id="search_address" layoutX="37.0" layoutY="58.0" prefHeight="18.0" prefWidth="164.0" />
-        <TextField fx:id="search_name" layoutX="82.0" layoutY="114.0" prefHeight="26.0" prefWidth="306.0" />
+        <TextField fx:id="search_name" layoutX="62.0" layoutY="115.0" prefHeight="26.0" prefWidth="306.0" />
         <TextField fx:id="search_country" layoutX="218.0" layoutY="58.0" prefHeight="18.0" prefWidth="164.0" />
         <TextField fx:id="search_email" layoutX="400.0" layoutY="58.0" prefHeight="18.0" prefWidth="164.0" />
         <Label layoutX="37.0" layoutY="36.0" text="Adresse :" />
         <Label layoutX="218.0" layoutY="36.0" text="Pays :" />
         <Label layoutX="400.0" layoutY="36.0" text="E-Mail :" />
-        <Label layoutX="82.0" layoutY="90.0" text="Nom :" />
-        <Button layoutX="404.0" layoutY="115.0" mnemonicParsing="false" onAction="#oneClickSearch" text="Rechercher" />
-        <Button layoutX="530.0" layoutY="115.0" mnemonicParsing="false" onAction="#oneClickAdd" prefHeight="26.0" prefWidth="25.0" text="+" />
+        <Label layoutX="62.0" layoutY="91.0" text="Nom :" />
+        <Button layoutX="384.0" layoutY="116.0" mnemonicParsing="false" onAction="#oneClickSearch" text="Rechercher" />
+        <Button layoutX="510.0" layoutY="116.0" mnemonicParsing="false" onAction="#oneClickAdd" prefHeight="26.0" prefWidth="25.0" text="+" />
       <TableView fx:id="tableClient" layoutX="14.0" layoutY="163.0" prefHeight="222.0" prefWidth="570.0">
         <columns>
             <TableColumn fx:id="idColumn" prefWidth="40.0" text="id" visible="false" />
@@ -32,10 +32,11 @@
             <TableColumn fx:id="deleteActionColumn" prefWidth="55.0" />
         </columns>
       </TableView>
-      <Button fx:id="btnProfil" layoutX="492.0" layoutY="115.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="25.0" >
-          <graphic>
-              <FontIcon glyphName="TRASH" />
-          </graphic>
-      </Button>
+        <Button fx:id="btnProfil" layoutX="472.0" layoutY="116.0" mnemonicParsing="false" onAction="#oneClickManagementUsers" prefHeight="26.0" prefWidth="25.0" />
+      <ImageView fitHeight="20.0" fitWidth="20.0" layoutX="475.0" layoutY="119.0" onMouseClicked="#oneClickManagementUsers" pickOnBounds="true" preserveRatio="true">
+          <image>
+              <Image url="@icons/avatar.jpg" />
+          </image>
+      </ImageView>
     </children>
 </AnchorPane>
